<resources>
    <string name="app_name">DrawRun</string>
    <string name="hello_drawrun">Hello DrawRun!</string>
    <string name="hint_user_id">아이디</string>
    <string name="hint_email">이메일</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_confirm_password">비밀번호 확인</string>
    <string name="hint_user_name">이름</string>
    <string name="hint_nickname">닉네임</string>
    <string name="btn_register">회원가입</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>